examples/failing/ExportConflictTypeOp/B.purs
module B where

type T2 a b = a -> b

infixr 4 type T2 as ??
